updated globals with design best practices for spacing & fixed form layout

--- a/globals.css
+++ b/globals.css
@@ -1,45 +1,40 @@
 
 :root{
-    --colors-accent: #01579B;
-    --colors-muted: #616161;
+    --colors-accent: #0278bd;
+    --colors-accent-dark: #021bbd;
+    --colors-accent-light: #02bda4;
     --colors-black: #000;
     --colors-white: #FFF;
 
-    --spacer-tiny: 0.1rem;
-    --spacer-sm: 0.8rem;
-    --spacer-med: 1rem;
-    --spacer-lg: 1.2rem;
+    --spacer-tiny: 0.2rem;
+    --spacer-sm: 1rem;
+    --spacer-med: 1.4rem;
+    --spacer-lg: 1.8rem;
 
-    --button-width: 120px;
-    --button-height: 50px;
+    --button-width: 6.8rem;
 
-    --border-width: 2px;
+    --font-size-sm: 1.2rem;
+    --font-size-med: 1.6rem;
+    --font-size-lg: 2rem;
 
-    --font-size-caption: 12px;
-    --font-size-regular: 14px;
+    --max-page-width: 80vw;
+
+    --line-spacing: calc(var(--font-size-sm) * 1.4);
     
     --font: "Verdana", sans-serif;
 }
 
-@media all and (min-width: 500px){
-   :root{
-    --spacer-sm: 1rem;
-    --spacer-med: 1.2rem;
-    --spacer-lg: 1.4rem;
-
-    --font-size-regular: 16px;
-   } 
+@media all and (min-width: 600px){
 
 }
 
 @media all and (min-width: 800px){
     :root{
-     --spacer-sm: 1.2rem;
-     --spacer-med: 1.6rem;
-     --spacer-lg: 2rem;
+
+     --spacer-med: 1.8rem;
+     --spacer-lg: 2.4rem;
  
-     --font-size-caption: 14px;
-     --font-size-regular: 18px;
+     
     } 
  
  }
